--- a/package.json
+++ b/package.json
@@ -10,13 +10,20 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-google-maps/api": "^2.20.3",
     "@types/google.maps": "^3.58.1",
+    "@types/papaparse": "^5.3.15",
+    "@vis.gl/react-google-maps": "^1.3.0",
     "axios": "^1.7.7",
+    "cors": "^2.8.5",
+    "google-map-react": "^2.2.1",
+    "papaparse": "^5.4.1",
     "react": "^18.3.1",
     "react-dom": "^18.3.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.11.1",
+    "@types/cors": "^2.8.17",
     "@types/react": "^18.3.10",
     "@types/react-dom": "^18.3.0",
     "@vitejs/plugin-react": "^4.3.2",
